--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ address{
     text-align: center;
 }
 
-.buttom {
+.button {
     background-color: #4d5ae5;
     font-weight: 500;
     line-height: 1.5;
@@ -111,8 +111,8 @@ address{
     color: #fff;
     font-size: 16px;
 }
-.buttom:hover,
-.buttom:active {
+.button:hover,
+.button:active {
     background-color: #404bbf;
 }
 
